--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <ngb-carousel #carousel>
     <label class="text-white text-center"> Status:  {{ pause }}</label>
     <ng-template ngbSlide *ngFor="let i of list">
-        <img src="{{i}}" width="100%">
+        <img src="{{i.image}}" width="100%">
     </ng-template>
 </ngb-carousel>
