--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body bg-dark">
                             <label for="" class="label text-white"> Date:  {{ date }} </label><br>
-                            <label for="" class="label text-white">  </label> <br>
+                            <label for="" class="label text-white"> Images : {{ list?.length }} </label> <br>
                             <label for="" class="label text-white">  </label><br>
                             <label for="" class="label text-white">  </label>
                         </div>
@@ -37,7 +37,7 @@
                         <div class="card-body bg-dark">
                             <div class="row">
                                 <div class="col-md-5 my-3">
-                                    <label for="" class="label text-white">Showing .</label>
+                                    <label for="" class="label text-white">Showing  {{ list?.length }} </label>
                                 </div>
                                 <div class="col-md-7">
                                     <form>
