--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,6 @@
-<ngb-carousel #carousel>
+<ngb-carousel #carousel (slide)="onSlide($event)">
     <label class="text-white text-center"> Status:  {{ pause }}</label>
-    <ng-template ngbSlide *ngFor="let item of list; index as i">
-        <img src="{{item.image}}"  width="100%">  
-  
+    <ng-template ngbSlide *ngFor="let item of list; index as i" [id]="'slideId_' + i">
+        <img src="{{item.image}}" width="100%">
     </ng-template>
 </ngb-carousel>
